raffia/tests/error/less/mixin/params-after-varadic.snap
---
source: raffia/tests/error.rs
---
error: expect token `)`, but found `,`
  ┌─ params-after-varadic.less:1:17
  │
1 │ .mixin(@a, @b..., @c) {}
  │                 ^


